FIXED: ffmpeg download was failing & also updated the file download logic.