@@ -2,29 +2,28 @@ package ffmpegintegration;
 
 import browsersetup.SelenideBase;
 import com.google.common.util.concurrent.Uninterruptibles;
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.time.Duration;
-import java.util.concurrent.TimeUnit;
-
+import lombok.extern.log4j.Log4j2;
 import org.apache.commons.configuration2.ex.ConfigurationException;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.SystemUtils;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import utilities.DateUtil;
 
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStreamReader;
+import java.nio.file.Paths;
+import java.time.Duration;
+import java.util.concurrent.TimeUnit;
+
+@Log4j2
 public class FFMPEGRunner
 {
-	private static final Logger LOGGER = LogManager.getLogger(FFMPEGRunner.class);
-	private static final String COMMANDPROMPT = "C:" + File.separator + "Windows" + File.separator + "System32" + File.separator + "cmd.exe";
+	//private static final String COMMANDPROMPT = "C:" + File.separator + "Windows" + File.separator + "System32" + File.separator + "cmd.exe";
 	private static Process process;
 	private static String outputFile;
 	private static String ffmpegBinary;
-	private static boolean hasKillProcessStartedOnce = false;
 
 	private static final String UNSHARPPARAMETER = "unsharp=luma_msize_x=3:luma_msize_y=3:luma_amount=1.0";
 
@@ -34,11 +33,10 @@ public class FFMPEGRunner
 
 	private static String getOutputFilename(String browser) throws IOException
 	{
-		String outputFilename;
-		final String outputFileDirectory = System.getProperty("user.dir") + File.separator + "Captures";
-		var outputFile = new File(outputFileDirectory);
+		// Create capture directory to store captures if it doesn't exist
+		var outputFile = new File(String.valueOf(Paths.get(System.getProperty("user.dir"), "Captures")));
 		if (!outputFile.exists() || !outputFile.isDirectory())
-			FileUtils.forceMkdir(new File(outputFileDirectory));
+			FileUtils.forceMkdir(outputFile);
 
 		// Logic to deduce outputfilename by detecting the Jira ticket ID. If no ticket ID is present then replace with timestamp
 		String scenarioName = SelenideBase.getScenario().getName();
@@ -56,44 +54,30 @@ public class FFMPEGRunner
 				builder.append(array[i]);
 		}
 
+		// Create final capture name
+		String outputFilename;
 		if (!builder.isEmpty())
 			outputFilename = browser + "_" + builder + "_" + DateUtil.getCurrentTimestamp() + ".mkv";
 		else
 			outputFilename = browser + "_" + DateUtil.getCurrentTimestamp() + ".mkv";
-		return outputFileDirectory + File.separator + outputFilename;
+
+		return String.valueOf(Paths.get(System.getProperty("user.dir"), "Captures", outputFilename));
 	}
 
 	private static void killExistingFFMPEGProcesses() throws IOException, InterruptedException
 	{
-		if (!hasKillProcessStartedOnce)
-			LOGGER.info("Attempting to forcefully terminate all rogue FFMPEG processes before initiating capture...");
-		else
-			LOGGER.info("Attempting to terminate FFMPEG forcefully...");
-
-		var pb = new ProcessBuilder();
-		pb.command(COMMANDPROMPT, "/C", "tasklist.exe /fo csv /nh");
-		pb.redirectErrorStream(true);
-		var taskkillProcess = pb.start();
-
-		var br = new BufferedReader(new InputStreamReader(taskkillProcess.getInputStream()));
-		String list;
-		while ((list = br.readLine()) != null)
+		log.info("Attempting to terminate FFMPEG forcefully...");
+		var process = Runtime.getRuntime().exec(new String[] {"tasklist"});
+		var reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+		String line;
+		while ((line = reader.readLine()) != null)
 		{
-			int index = list.indexOf(",");
-			String process = list.substring(0, index).replace("\"", "");
-			if (StringUtils.containsAnyIgnoreCase(process, ffmpegBinary))
+			if (line.contains(ffmpegBinary))
 			{
-				LOGGER.info("Attempting to terminate {}", process);
-				var processBuilder = new ProcessBuilder();
-				processBuilder.command(COMMANDPROMPT, "/C", "taskkill /im " + process);
-				var killProcess = processBuilder.start();
-				killProcess.waitFor();
-				LOGGER.info("{} terminated forcefully.", process);
+				String pid = line.split("\\s+")[1];
+				Runtime.getRuntime().exec(new String[] {"taskkill", "/F ", "/T ", "/PID ", pid});
 			}
 		}
-		br.close();
-		taskkillProcess.waitFor();
-		hasKillProcessStartedOnce = true;
 	}
 
 	/**
@@ -131,7 +115,7 @@ public class FFMPEGRunner
 						.getInstance().getFramerateProperty(), "-preset", "ultrafast", "-filter:v", UNSHARPPARAMETER, "-y", outputFile);
 		processBuilder.redirectErrorStream(true);
 		process = processBuilder.start();
-		LOGGER.info("Screen capture initialized.");
+		log.info("Screen capture initialized.");
 		readFFMPEGLogs();
 	}
 
@@ -139,19 +123,19 @@ public class FFMPEGRunner
 	{
 		if (StringUtils.containsIgnoreCase(FFMPEGPropertiesManager.getInstance().getDisplayFFMPEGLogs(), "yes"))
 		{
-			LOGGER.info("FFMPEG Logs enabled! Be prepared to be spammed!");
+			log.info("FFMPEG Logs enabled! Be prepared to be spammed!");
 			new Thread(() ->
 			{
 				try (var bufferedReader = new BufferedReader(new InputStreamReader(process.getInputStream())))
 				{
 					String line;
 					while ((line = bufferedReader.readLine()) != null)
-						LOGGER.debug(line);
+						log.debug(line);
 				}
 				catch (IOException e)
 				{
-					LOGGER.error("Error reading I/O from FFMPEG!");
-					LOGGER.error(e);
+					log.error("Error reading I/O from FFMPEG!");
+					log.error(e);
 				}
 			}).start();
 		}
@@ -166,36 +150,36 @@ public class FFMPEGRunner
 	 */
 	public static void stopVideoCapture() throws InterruptedException, IOException
 	{
-		LOGGER.info("Is FFMPEG process alive? {}. Attempting to terminate it gracefully.", process.isAlive());
+		log.info("Is FFMPEG process alive? {}. Attempting to terminate it gracefully.", process.isAlive());
 		if (SystemUtils.IS_OS_WINDOWS)
 		{
 			stopFFMPEGProcess();
 			if (process.isAlive())
 			{
-				LOGGER.error("Graceful termination of FFMPEG failed.");
+				log.error("Graceful termination of FFMPEG failed.");
 				killExistingFFMPEGProcesses();
 			}
 			else
-				LOGGER.info("FFMPEG terminated successfully.");
+				log.info("FFMPEG terminated successfully.");
 		}
 		else if (SystemUtils.IS_OS_MAC)
 		{
 			stopFFMPEGProcess();
 			if (process.isAlive())
 			{
-				LOGGER.info("FFMPEG did not end. Terminating it forcefully..");
+				log.info("FFMPEG did not end. Terminating it forcefully..");
 				process.destroy();
 				process.waitFor();
 			}
 			else
-				LOGGER.info("FFMPEG terminated successfully.");
+				log.info("FFMPEG terminated successfully.");
 		}
-		LOGGER.info("Screen capture stopped.");
+		log.info("Screen capture stopped.");
 		var file = new File(outputFile);
 		if (file.exists() && file.isFile())
-			LOGGER.info("Video capture saved: {}", outputFile);
+			log.info("Video capture saved: {}", outputFile);
 		else
-			LOGGER.error("Something went wrong! Screen capture was not found in Captures directory.");
+			log.error("Something went wrong! Screen capture was not found in Captures directory.");
 	}
 
 	private static void stopFFMPEGProcess() throws InterruptedException
@@ -216,7 +200,7 @@ public class FFMPEGRunner
 			{
 				if (!e.getMessage().contains("Stream closed"))
 				{
-					LOGGER.error("FFMPEG still running", e);
+					log.error("FFMPEG still running", e);
 				}
 			}
 		}
